2002-08-21  Luke Gorrie  <luke@bluetail.com>

	* README, Makefile.in (VERSION): Increased 3.0a -> 3.0b to
	distinguish from the version installed on Bluetail'ers' machines
	earlier today.

	* elisp/edb.el, elisp/distel.erl: Erlang-extended-mode buffers now
	indicate via the mode line whether they are currently being
	interpreted. Also extended/improved the recent debug monitoring
	changes.

	* elisp/erl.el (erl-reductions): Added reductions counter, saying
	how many times a process has been executed (_not_ how many calls
	it has made, like Erlang reductions). This can be inspected
	directly for debug purposes.

	* config/emacs-init-snippet.el.in: Using autoconf on the .emacs
	snippet to setup the right load-path. It seems that just making a
	directory in ${prefix}/share/emacs/site-lisp/ doesn't get you
	into the load path automatically.

	* elisp/edb.el, distel.erl: Reworked the debugger so that the
	Monitor process tracks the current set of breakpoints and
	interpreted modules. This lays the ground work for showing
	breakpoints in source code, and indicating which modules are
	interpreted via the mode line -- but that's not implemented
	yet. Meanwhile, the debugger appears to still work :-)

	* Makefile.in: Moved the documentation onto separate targets:
	  "info", "info_install", "postscript". Hopefully this will avoid
	  hittings errors in basic installations on non-GNU systems.

2002-08-20  david wallin  <david.wallin@ul.ie>

	* elisp/distel.el (erlang-extended-mode): Added a keybinding
	  for erl-ie-evaluate: C-M-x.

	* elisp/distel-ie.el (erl-ie-evaluate): If the current buffer 
	  isn't a session; start a session and copy the marked region 
	  over to it. All interaction will then take place in the 
	  session buffer.

2002-08-20  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl-service.el (erl-find-source-under-point): Can now
	handle text like "foo:bar/2" - i.e. reads the arity correctly, so
	you can jump to definitions from e.g. export lists. Actual change