@@ -1,5 +1,10 @@
 2002-08-21  Luke Gorrie  <luke@bluetail.com>
 
+	* config/emacs-init-snippet.el.in: Now being careful to add
+	Distel at the end of the load-path, so that the
+	possibly-redundant files we include for compatibility (ewoc.el,
+	md5.el) don't override any locally installed ones.
+
 	* README, Makefile.in (VERSION): Increased 3.0a -> 3.0b to
 	distinguish from the version installed on Bluetail'ers' machines
 	earlier today.
